--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    
     "deploy": "gh-pages -d build",
     "predeploy": "npm run build"
   },
@@ -38,7 +38,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
-  ,
-  "homepage": "https://scm1400.github.io/movie_app_react_clone" 
+  },
+  "homepage": "https://scm1400.github.io/movie_app_react_clone"
 }
